tests/NormalTests/paczka1/fuzzy1/76894645.err
Error in line 6: S933 A297 91,8
Error in line 7: VygSMpH0 S933 51,1
Error in line 10: VygSMpH0 A297 75,7
Error in line 21: izQN2bLwBR A171 -1,6
Error in line 18: AFctkH S448 73,4
Error in line 28: x5aZ S448 20,2
Error in line 34: izQN2bLwBR A1~1 88,5
Error in line 27: AFctkH A297 10,6
